fixed spacing links work page

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   height: 25px;
   position: absolute;
   top: 50%;
-  left: 40%;
+  left: 36%;
   display: none;
 }
 
@@ -76,7 +76,7 @@
   height: 25px;
   position: absolute;
   top: 50%;
-  left: 60%;
+  left: 56%;
   display: none;
 }
 
